# HR-Scan-CV

./: .env.example  .gitignore  Dockerfile  PROJECT.md  README.md  clean_repo.sh  create_jd.py  pyproject.toml  requirements.txt
agents/: __init__.py  cv_parser.py  jd_matcher.py  report_writer.py  scorer.py  test.py
api/: main.py  middleware.py  tracer.py
api/routes/: jobs.py  reports.py  scan.py  upload.py
frontend/: app.py  streamlit_app.py
graph/: __init__.py  nodes.py  state.py  workflow.py
infra/: s3_setup.sh  samconfig.toml  template.yaml
prompts/: __init__.py  matcher_prompt.py  parser_prompt.py  scorer_prompt.py  writer_prompt.py
rag/: __init__.py  cv_chunker.py  embedder.py  ingestor.py  retriever.py
rag/schemas/: jd_template.json  rubric.json
schemas/: cv_schema.py  jd_schema.py  match_schema.py  report_schema.py  score_schema.py
tests/: test_api.py  test_cv_parser.py  test_jd_matcher.py  test_orchestrator.py  test_report_writer.py  test_retriever.py  test_scorer.py
tools/: __init__.py  cv_to_markdown.py  docx_extractor.py  pdf_extractor.py  pdf_generator.py  s3_uploader.py
