[project]
name = "hr-cv-scanner"
version = "0.1.0"
description = "Multi-agent CV screening system with LangGraph + RAG."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.31.0",
  "langgraph>=0.3.0",
  "langchain>=0.3.0",
  "chromadb>=0.6.0",
  "sentence-transformers>=3.1.0",
  "pdfplumber>=0.11.0",
  "python-docx>=1.1.2",
  "reportlab>=4.2.0",
  "boto3>=1.35.0",
  "chainlit>=1.2.0",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "ruff>=0.6.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

